--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "git-commit-msg-linter": "^4.1.2",
-    "husky": "^8.0.1",
+    "husky": "4.0.0",
     "jest": "^28.1.0",
     "lint-staged": "^12.4.1",
     "ts-jest": "^28.0.2",
