--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@types/mongodb": "^4.0.7",
     "bcrypt": "^5.0.1",
+    "mongodb": "^4.9.1",
     "validator": "^13.7.0"
   }
 }
