--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/SaldanhaVitor/clean-ts-api#readme",
   "devDependencies": {
-    "@shelf/jest-mongodb": "^4.1.0",
+    "@shelf/jest-mongodb": "1.1.3",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.33",
@@ -42,9 +42,9 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@types/mongodb": "^4.0.7",
+    "@types/mongodb": "3.3.14",
     "bcrypt": "^5.0.1",
-    "mongodb": "^4.9.1",
+    "mongodb": "3.5.1",
     "validator": "^13.7.0"
   }
 }
