--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/SaldanhaVitor/clean-ts-api#readme",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.5.1",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^17.0.33",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -42,6 +44,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "mongodb": "^4.9.1",
     "validator": "^13.7.0"
   }
 }
